# secret-sharing-protocol

./: README.md  main.py  pyproject.toml
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
crypto/: encryption.py  shamir.py
docs/: benchmark_results.json
logs/: models.py  utils.py
logs/migrations/: 0001_initial.py
secret_sharing_protocol.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
secrets_app/: apps.py  models.py  services.py  urls.py  views.py
secrets_app/migrations/: 0001_initial.py
templates/: base.html  home.html
templates/accounts/: dashboard.html  login.html  register.html
templates/secrets_app/: secret_detail.html  secret_form.html  secret_list.html  secret_recover.html  share_list.html
tests/: benchmark.py  test_shamir.py
