[project]
name = "secret-sharing-protocol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "crypto>=1.4.1",
    "cryptography>=48.0.0",
    "django>=6.0.5",
    "djangorestframework>=3.17.1",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "secret>=0.8",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
[tool.setuptools]
packages = ["crypto", "tests"]
